buttons, centered calculator, html symbols

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="index.css" />
+    <title>CACLTR</title>
   </head>
   <body>
     <div class="container">
@@ -18,27 +19,31 @@
           </div>
         </div>
         <div class="buttons">
-          <button class="btn--grey">00</button>
-          <button class="btn--grey">0</button>
-          <button class="btn--grey">1</button>
-          <button class="btn--grey">2</button>
-          <button class="btn--grey">3</button>
-          <button class="btn--grey">4</button>
-          <button class="btn--grey">5</button>
-          <button class="btn--grey">6</button>
-          <button class="btn--grey">7</button>
-          <button class="btn--grey">8</button>
-          <button class="btn--grey">9</button>
-          <button class="btn--grey">.</button>
+          <div class="buttons__grey-buttons">
+            <button class="btn--grey">9</button>
+            <button class="btn--grey">8</button>
+            <button class="btn--grey">7</button>
+            <button class="btn--grey">6</button>
+            <button class="btn--grey">5</button>
+            <button class="btn--grey">4</button>
+            <button class="btn--grey">3</button>
+            <button class="btn--grey">2</button>
+            <button class="btn--grey">1</button>
+            <button class="btn--grey">00</button>
+            <button class="btn--grey">0</button>
+            <button class="btn--grey">.</button>
+          </div>
 
-          <button class="btn--orange">C</button>
-          <button class="btn--orange">sign</button>
-          <button class="btn--orange">Del</button>
-          <button class="btn--orange">division</button>
-          <button class="btn--orange">multiplication</button>
-          <button class="btn--orange">subtraction</button>
-          <button class="btn--orange">addition</button>
-          <button class="btn--orange">=</button>
+          <div class="buttons__operators">
+            <button class="btn--orange">C</button>
+            <button class="btn--orange">&plusmn</button>
+            <button class="btn--orange">Del</button>
+            <button class="btn--orange">&#247;</button>
+            <button class="btn--orange">&times</button>
+            <button class="btn--orange">-</button>
+            <button class="btn--orange">+</button>
+            <button class="btn--orange">=</button>
+          </div>
         </div>
       </div>
     </div>
