--- a/index.html
+++ b/index.html
@@ -14,35 +14,38 @@
           <h1>Calculator</h1>
         </div>
         <div class="screen">
-          <div class="screen__bright-section">
-            <p class="screen__bright-section__input"></p>
+          <div class="screen__inner">
+            <p class="screen__inner__input"></p>
           </div>
         </div>
         <div class="buttons">
           <div class="buttons__grey-buttons">
-            <button class="btn--grey">9</button>
-            <button class="btn--grey">8</button>
-            <button class="btn--grey">7</button>
-            <button class="btn--grey">6</button>
-            <button class="btn--grey">5</button>
-            <button class="btn--grey">4</button>
-            <button class="btn--grey">3</button>
-            <button class="btn--grey">2</button>
-            <button class="btn--grey">1</button>
-            <button class="btn--grey">00</button>
-            <button class="btn--grey">0</button>
-            <button class="btn--grey">.</button>
+            <button class="btn--grey btn">9</button>
+            <button class="btn--grey btn">8</button>
+            <button class="btn--grey btn">7</button>
+            <button class="btn--grey btn">6</button>
+            <button class="btn--grey btn">5</button>
+            <button class="btn--grey btn">4</button>
+            <button class="btn--grey btn">3</button>
+            <button class="btn--grey btn">2</button>
+            <button class="btn--grey btn">1</button>
+            <button class="btn--grey btn">00</button>
+            <button class="btn--grey btn">0</button>
+            <button class="btn--grey btn">.</button>
           </div>
 
-          <div class="buttons__operators">
-            <button class="btn--orange">C</button>
-            <button class="btn--orange">&plusmn</button>
-            <button class="btn--orange">Del</button>
-            <button class="btn--orange">&#247;</button>
-            <button class="btn--orange">&times</button>
-            <button class="btn--orange">-</button>
-            <button class="btn--orange">+</button>
-            <button class="btn--orange">=</button>
+          <div class="buttons__operators--horizontal">
+            <button class="btn--orange btn">C</button>
+            <button class="btn--orange btn">&plusmn</button>
+            <button class="btn--orange btn">Del</button>
+            <button class="btn--orange btn">&#247;</button>
+          </div>
+
+          <div class="buttons__operators--vertical">
+            <button class="btn--orange btn">&times</button>
+            <button class="btn--orange btn">-</button>
+            <button class="btn--orange btn">+</button>
+            <button class="btn--orange btn">=</button>
           </div>
         </div>
       </div>
