--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <div class="screen">
           <div class="screen__inner">
-            <p class="screen__inner__input"></p>
+            <p class="screen__inner__input">123123</p>
           </div>
         </div>
         <div class="buttons">
@@ -51,6 +51,6 @@
       </div>
     </div>
 
-    <script src="index.js"></script>
+    <script src="index.js" type="module"></script>
   </body>
 </html>
