--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <div class="screen">
           <div class="screen__inner">
-            <p class="screen__inner__input">123123</p>
+            <p class="screen__inner__input">13</p>
           </div>
         </div>
         <div class="buttons">
@@ -36,13 +36,13 @@
 
           <div class="buttons__operators--horizontal">
             <button class="btn--orange btn">C</button>
-            <button class="btn--orange btn">&plusmn</button>
+            <button class="btn--orange btn sign">&plusmn</button>
             <button class="btn--orange btn">Del</button>
-            <button class="btn--orange btn">&#247;</button>
+            <button class="btn--orange btn divide">&#247;</button>
           </div>
 
           <div class="buttons__operators--vertical">
-            <button class="btn--orange btn">&times</button>
+            <button class="btn--orange btn multiply">&times</button>
             <button class="btn--orange btn">-</button>
             <button class="btn--orange btn">+</button>
             <button class="btn--orange btn">=</button>
