--- a/index.html
+++ b/index.html
@@ -5,52 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="index.css" />
-    <title>CACLTR</title>
+    <title>Document</title>
   </head>
   <body>
-    <div class="container">
-      <div class="calculator">
-        <div class="heading">
-          <h1>Calculator</h1>
-        </div>
-        <div class="screen">
-          <div class="screen__inner">
-            <p class="screen__inner__input">13</p>
-          </div>
-        </div>
-        <div class="buttons">
-          <div class="buttons__grey-buttons">
-            <button class="btn--grey btn">9</button>
-            <button class="btn--grey btn">8</button>
-            <button class="btn--grey btn">7</button>
-            <button class="btn--grey btn">6</button>
-            <button class="btn--grey btn">5</button>
-            <button class="btn--grey btn">4</button>
-            <button class="btn--grey btn">3</button>
-            <button class="btn--grey btn">2</button>
-            <button class="btn--grey btn">1</button>
-            <button class="btn--grey btn">0</button>
-            <button class="btn--grey btn">00</button>
-            <button class="btn--grey btn">.</button>
-          </div>
-
-          <div class="buttons__operators--horizontal">
-            <button class="btn--orange btn">C</button>
-            <button class="btn--orange btn sign">&plusmn</button>
-            <button class="btn--orange btn">Del</button>
-            <button class="btn--orange btn divide">&#247;</button>
-          </div>
-
-          <div class="buttons__operators--vertical">
-            <button class="btn--orange btn multiply">&times</button>
-            <button class="btn--orange btn">-</button>
-            <button class="btn--orange btn">+</button>
-            <button class="btn--orange btn">=</button>
-          </div>
-        </div>
+    <div class="calculator-grid">
+      <div class="output">
+        <div data-previous-operand class="previous-operand"></div>
+        <div data-current-operand class="current-operand"></div>
       </div>
-    </div>
 
-    <script src="index.js" type="module"></script>
+      <button data-all-clear class="span-two">AC</button>
+
+      <button data-delete>DEL</button>
+      <button data-operation>/</button>
+      <button data-number>1</button>
+      <button data-number>2</button>
+      <button data-number>3</button>
+      <button data-operation>*</button>
+      <button data-number>4</button>
+      <button data-number>5</button>
+      <button data-number>6</button>
+      <button data-operation>+</button>
+      <button data-number>7</button>
+      <button data-number>8</button>
+      <button data-number>9</button>
+      <button data-operation>-</button>
+      <button data-number>.</button>
+      <button data-number>0</button>
+
+      <button class="span-two" data-equals>=</button>
+    </div>
+    <script src="index.js"></script>
   </body>
 </html>
