add html data attributes

--- a/index.html
+++ b/index.html
@@ -15,34 +15,35 @@
         </div>
         <div class="screen">
           <div class="screen__inner">
-            <p class="screen__inner__input">13</p>
+            <p class="screen__inner__input" data-previous-operand>13</p>
+            <p class="screen__inner__input" data-current-operand>13</p>
           </div>
         </div>
         <div class="buttons">
           <div class="buttons__grey-buttons">
-            <button class="btn--grey btn">9</button>
-            <button class="btn--grey btn">8</button>
-            <button class="btn--grey btn">7</button>
-            <button class="btn--grey btn">6</button>
-            <button class="btn--grey btn">5</button>
-            <button class="btn--grey btn">4</button>
-            <button class="btn--grey btn">3</button>
-            <button class="btn--grey btn">2</button>
-            <button class="btn--grey btn">1</button>
-            <button class="btn--grey btn">0</button>
-            <button class="btn--grey btn">00</button>
-            <button class="btn--grey btn">.</button>
+            <button data-number class="btn--grey btn">9</button>
+            <button data-number class="btn--grey btn">8</button>
+            <button data-number class="btn--grey btn">7</button>
+            <button data-number class="btn--grey btn">6</button>
+            <button data-number class="btn--grey btn">5</button>
+            <button data-number class="btn--grey btn">4</button>
+            <button data-number class="btn--grey btn">3</button>
+            <button data-number class="btn--grey btn">2</button>
+            <button data-number class="btn--grey btn">1</button>
+            <button data-number class="btn--grey btn">0</button>
+            <button data-number class="btn--grey btn">00</button>
+            <button data-number class="btn--grey btn">.</button>
           </div>
 
           <div class="buttons__operators--horizontal">
             <button class="btn--orange btn">C</button>
-            <button class="btn--orange btn sign">&plusmn</button>
+            <button class="btn--orange btn sign">+/-</button>
             <button class="btn--orange btn">Del</button>
-            <button class="btn--orange btn divide">&#247;</button>
+            <button class="btn--orange btn divide">/</button>
           </div>
 
           <div class="buttons__operators--vertical">
-            <button class="btn--orange btn multiply">&times</button>
+            <button class="btn--orange btn multiply">*</button>
             <button class="btn--orange btn">-</button>
             <button class="btn--orange btn">+</button>
             <button class="btn--orange btn">=</button>
