html : add data-operation & -delete & -clear & -equals

--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@
           </div>
 
           <div class="buttons__operators--horizontal">
-            <button class="btn--orange btn">C</button>
-            <button class="btn--orange btn sign">+/-</button>
-            <button class="btn--orange btn">Del</button>
-            <button class="btn--orange btn divide">/</button>
+            <button data-clear class="btn--orange btn">C</button>
+            <button data-sign class="btn--orange btn sign">+/-</button>
+            <button data-delete class="btn--orange btn">Del</button>
+            <button data-operation class="btn--orange btn divide">/</button>
           </div>
 
           <div class="buttons__operators--vertical">
-            <button class="btn--orange btn multiply">*</button>
-            <button class="btn--orange btn">-</button>
-            <button class="btn--orange btn">+</button>
-            <button class="btn--orange btn">=</button>
+            <button data-operation class="btn--orange btn multiply">*</button>
+            <button data-operation class="btn--orange btn">-</button>
+            <button data-operation class="btn--orange btn">+</button>
+            <button data-equals class="btn--orange btn">=</button>
           </div>
         </div>
       </div>
