Calculator : clear() & appendNumber() & updateDisplay

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         </div>
         <div class="screen">
           <div class="screen__inner">
-            <p class="screen__inner__input" data-previous-operand>13</p>
-            <p class="screen__inner__input" data-current-operand>13</p>
+            <p class="screen__inner__input" data-previous-operand></p>
+            <p class="screen__inner__input" data-current-operand></p>
           </div>
         </div>
         <div class="buttons">
