--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <link rel="stylesheet" href="index.css" />
     <title>CACLTR</title>
   </head>
@@ -15,8 +16,8 @@
         </div>
         <div class="screen">
           <div class="screen__inner">
-            <p class="screen__inner__input" data-previous-operand></p>
-            <p class="screen__inner__input" data-current-operand></p>
+            <div data-previous-operand class="screen__inner__input"></div>
+            <div data-current-operand class="screen__inner__input"></div>
           </div>
         </div>
         <div class="buttons">
